day2/services/springboot-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-microservice
  labels:
    app: springboot-microservice
spec:
  replicas: 1  # Updated replicas for high availability
  selector:
    matchLabels:
      app: springboot-microservice
  template:
    metadata:
      labels:
        app: springboot-microservice
    spec:
      containers:
      - name: springboot-microservice
        image: skrisacr.azurecr.io/springbootapp:v2
        ports:
          -  containerPort: 8881  # Application container port
